--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,10 +1,6 @@
 {
-  "extends": [
-    "stylelint-config-standard"
-  ],
-  "plugins": [
-    "stylelint-order"
-  ],
+  "extends": ["stylelint-config-standard"],
+  "plugins": ["stylelint-order"],
   "rules": {
     "color-no-hex": true,
     "selector-class-pattern": null,
