Installation de Postgres via Docker

--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "bash:production": "scalingo -a suite-gestionnaire-numerique run bash",
     "build": "next build",
     "check": "yarn dedupe --check && yarn typecheck && yarn lint:ts && yarn test:coverage",
+    "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
     "deadcode": "knip",
     "depcheck": "depcheck",
     "dev": "next dev",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:ts": "eslint src --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
     "postinstall": "husky || true",
+    "psql:local": "docker compose up -d postgres-dev && docker exec -it sgn_db_dev psql -U sgn sgn",
+    "psql:production": "scalingo -a suite-gestionnaire-numerique pgsql-console",
+    "psql:test": "docker compose up -d postgres-test && docker exec -it sgn_db_test psql -U sgn sgn",
     "start": "next start",
     "test": "vitest run",
     "test:coverage": "yarn test --coverage",
