--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.0",
-    "@types/node": "^22.0.0",
+    "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
@@ -60,9 +60,11 @@
     "husky": "^9.1.4",
     "jsdom": "^24.1.1",
     "knip": "^5.27.0",
+    "prisma": "^5.17.0",
     "stylelint": "^16.8.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.4",
