--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 NODE_ENV=development
 
+DATABASE_URL="postgresql://sgn:sgn@localhost:5432/sgn?schema=public"
+
 NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET=A_REMPLIR
 PRO_CONNECT_CLIENT_ID=A_REMPLIR
