:sparkles: Migration des utilisateurs de mongodb et FNE vers la suite gestionnaire

--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "license": "AGPL-3.0",
   "scripts": {
     "bash:production": "scalingo -a suite-gestionnaire-numerique run bash",
-    "build": "next build",
+    "build": "yarn prisma:migrate && yarn prisma:generate:fne && next build",
     "check": "yarn dedupe --check && yarn typecheck && yarn lint:ts && yarn test:coverage",
     "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
     "deadcode": "knip",
     "depcheck": "depcheck",
-    "dev": "next dev",
+    "dev": "yarn prisma:migrate && yarn prisma:generate:fne && next dev",
     "lint:css": "stylelint 'src/**/*.css'",
-    "lint:ts": "eslint src --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
+    "lint:ts": "eslint src seeds --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
+    "migration:utilisateur": "ts-node -T seeds/utilisateur.ts",
     "postinstall": "husky || true",
+    "prisma:drop:schema": "npx prisma db execute --file=prisma/dropSchema.sql",
+    "prisma:generate:fne": "npx prisma generate --schema seeds/fne/schema.prisma",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:reset": "yarn prisma:drop:schema && yarn prisma:migrate && yarn prisma:generate:fne",
     "psql:local": "docker compose up -d postgres-dev && docker exec -it sgn_db_dev psql -U sgn sgn",
     "psql:production": "scalingo -a suite-gestionnaire-numerique pgsql-console",
     "psql:test": "docker compose up -d postgres-test && docker exec -it sgn_db_test psql -U sgn sgn",
@@ -26,11 +31,13 @@
   },
   "dependencies": {
     "@gouvfr/dsfr": "^1.12.1",
+    "@prisma/client": "^5.18.0",
     "@sentry/nextjs": "^8",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@stryker-mutator/core": "^8.4.0",
@@ -60,11 +67,11 @@
     "husky": "^9.1.4",
     "jsdom": "^24.1.1",
     "knip": "^5.27.1",
+    "mongodb": "^6.8.0",
     "prisma": "^5.18.0",
     "stylelint": "^16.8.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.0.5",
