--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
 NODE_ENV=development
 
-DATABASE_URL="postgresql://sgn:sgn@localhost:5432/sgn?schema=public"
+DATABASE_URL=postgresql://sgn:sgn@localhost:5432/sgn?schema=public
+# Ne sert que pour les review app
+SHADOW_DATABASE_URL=
+# Debug de Prisma https://www.prisma.io/docs/orm/prisma-client/debugging-and-troubleshooting/debugging
+# DEBUG=*
+CO_NUM_DATABASE_NAME=test
+CO_NUM_DATABASE_URL=mongodb://admin:admin@localhost:27017/
+FNE_DATABASE_URL=postgresql://inclusion-numerique:password@localhost:5433/inclusion-numerique?schema=public
 
 NEXTAUTH_URL=http://localhost:3000/
 NEXTAUTH_SECRET=A_REMPLIR
