:sparkles: Créer une relation entre le SSO et un utilisateur

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deadcode": "knip",
     "depcheck": "depcheck",
     "dev": "yarn prisma:migrate && yarn prisma:generate:fne && next dev",
+    "dotenv:test": "dotenv -e .env.test",
     "format": "prettier -w . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "lint:css": "stylelint 'src/**/*.css'",
@@ -25,11 +26,11 @@
     "psql:production": "scalingo -a suite-gestionnaire-numerique pgsql-console",
     "psql:test": "docker compose up -d postgres-test && docker exec -it sgn_db_test psql -U sgn sgn",
     "start": "next start",
-    "test": "vitest run",
+    "test": "yarn dotenv:test -- yarn prisma:migrate && yarn dotenv:test -- vitest run",
     "test:coverage": "yarn test --coverage",
-    "test:mutation:frontend": "npx stryker run stryker-frontend.conf.json",
-    "test:mutation:backend": "npx stryker run stryker-backend.conf.json",
-    "test:watch": "vitest",
+    "test:mutation:frontend": "yarn dotenv:test -- npx stryker run stryker-frontend.conf.json",
+    "test:mutation:backend": "yarn dotenv:test -- npx stryker run stryker-backend.conf.json",
+    "test:watch": "yarn dotenv:test -- vitest",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -59,6 +60,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-istanbul": "^2.0.5",
     "depcheck": "^1.4.7",
+    "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-plugin-deprecation": "^2.0.0",
