:sparkles: Affichage de la liste de mes utilisateurs

--- a/.eslintrc
+++ b/.eslintrc
@@ -129,8 +129,7 @@
           "SyntheticEvent",
           "ReactElement",
           "ChartDataset",
-          "ClientSafeProvider",
-          "inventaireModel"
+          "ClientSafeProvider"
         ]
       }
     ],
