--- a/.eslintrc
+++ b/.eslintrc
@@ -61,11 +61,13 @@
       }
     ],
     "no-console": "error",
+    "no-else-return": "error",
     "no-multiple-empty-lines": ["error", { "max": 1 }],
     "no-multi-spaces": "error",
     "no-param-reassign": "error",
     "no-tabs": "error",
     "no-trailing-spaces": "error",
+    "no-unneeded-ternary": "error",
     "no-whitespace-before-property": "error",
     "object-curly-spacing": ["error", "always"],
     "object-curly-newline": "error",
