--- a/package.json
+++ b/package.json
@@ -16,20 +16,24 @@
     "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:ts": "eslint src seeds --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
-    "migration:utilisateur": "npx tsx seeds/utilisateur.ts",
+    "migration": "yarn migration:region && yarn migration:departement && yarn migration:groupement && yarn migration:structure && yarn migration:utilisateur",
+    "migration:departement": "tsx seeds/departement.ts",
+    "migration:groupement": "tsx seeds/groupement.ts",
+    "migration:region": "tsx seeds/region.ts",
+    "migration:structure": "tsx seeds/structure.ts",
+    "migration:utilisateur": "tsx seeds/utilisateur.ts",
     "postinstall": "husky || true && ./post-install.sh",
-    "prisma:drop:schema": "npx prisma db execute --file=prisma/dropSchema.sql",
-    "prisma:generate:fne": "npx prisma generate --schema seeds/fne/schema.prisma",
-    "prisma:migrate": "npx prisma migrate dev",
-    "prisma:reset": "yarn prisma:drop:schema && yarn prisma:migrate && yarn prisma:generate:fne",
+    "prisma:generate:fne": "prisma generate --schema seeds/fne/schema.prisma",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:reset": "prisma migrate reset -f && yarn prisma:generate:fne",
     "psql:local": "docker compose up -d postgres-dev && docker exec -it sgn_db_dev psql -U sgn sgn",
     "psql:production": "scalingo -a suite-gestionnaire-numerique pgsql-console",
     "psql:test": "docker compose up -d postgres-test && docker exec -it sgn_db_test psql -U sgn sgn",
     "start": "next start",
     "test": "yarn dotenv:test -- yarn prisma:migrate && yarn dotenv:test -- vitest run",
     "test:coverage": "yarn test --coverage",
-    "test:mutation:frontend": "yarn dotenv:test -- npx stryker run stryker-frontend.conf.json",
-    "test:mutation:backend": "yarn dotenv:test -- npx stryker run stryker-backend.conf.json",
+    "test:mutation:frontend": "yarn dotenv:test -- stryker run stryker-frontend.conf.json",
+    "test:mutation:backend": "yarn dotenv:test -- stryker run stryker-backend.conf.json",
     "test:watch": "yarn dotenv:test -- vitest",
     "typecheck": "tsc"
   },
