--- a/.eslintrc
+++ b/.eslintrc
@@ -142,6 +142,7 @@
       "files": ["**/*.test.ts?(x)"],
       "extends": ["plugin:vitest/all"],
       "rules": {
+        "@typescript-eslint/class-methods-use-this": "off",
         "@typescript-eslint/unbound-method": "off",
         "vitest/max-expects": "off",
         "vitest/no-conditional-expect": "off",
