--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://sgn:sgn@localhost:5434/sgn?schema=public
+DATABASE_URL=postgresql://sgn:sgn@localhost:5434/sgn?schema=public&connection_limit=1
