--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@stryker-mutator/core": "^8.5.0",
