--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ SENTRY_ENVIRONMENT=local
 
 NEXT_PUBLIC_SENTRY_DSN=$SENTRY_DSN
 NEXT_PUBLIC_SENTRY_ENVIRONMENT=$SENTRY_ENVIRONMENT
+NEXT_PUBLIC_HOST=http://localhost:3000/
