--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "noEmit": true,
+    "noErrorTruncation": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
