Filtrer par zone géographique sur mes utilisateurs

--- a/.eslintrc
+++ b/.eslintrc
@@ -136,14 +136,15 @@
     "react/forbid-component-props": "off",
     "react/jsx-boolean-value": ["error", "always", { "never": ["aria-hidden"] }],
     "react/jsx-curly-brace-presence": "off",
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
-    "react/jsx-indent": [2, 2],
-    "react/jsx-indent-props": [2, 2],
+    "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
+    "react/jsx-indent": ["error", 2],
+    "react/jsx-indent-props": ["error", 2],
     "react/jsx-max-depth": "off",
     "react/jsx-newline": "off",
     "react/jsx-no-bind": "off",
     "react/jsx-no-literals": "off",
     "react/react-in-jsx-scope": "off",
+    "react/no-multi-comp": ["error", { "ignoreStateless": true }],
     "sort-keys-fix/sort-keys-fix": "error",
     "@typescript-eslint/array-type": ["error", { "default": "generic", "readonly": "generic" }],
     "@typescript-eslint/ban-ts-comment": "off",
