--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-auth": "^4.24.8",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
