--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "mongodb": "^6.10.0",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "prisma-json-types-generator": "^3.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.2",
