--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "license": "AGPL-3.0",
   "scripts": {
-    "bash:production": "scalingo -a suite-gestionnaire-numerique run bash",
+    "bash:production": "scalingo -a suite-gestionnaire-numerique run --size XL bash",
     "build": "yarn prisma:migrate && yarn prisma:generate:fne && next build",
     "check": "yarn dedupe --check && yarn typecheck && yarn format:check && yarn lint:css && yarn lint:ts && yarn test:coverage",
     "db:start": "docker compose down && docker compose up -d && bash -c \"while ! docker compose logs | grep -q 'listening on IPv4 address'; do echo 'Waiting for database'; sleep 0.5; done\";",
@@ -44,6 +44,7 @@
     "mongodb": "^6.10.0",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "prisma-json-types-generator": "^3.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.2",
