🔧(emails): configuration de l'envoi d'emails
Configuration de Mailpit, Nodemailer et variables d'environnement SMTP.

--- a/.env
+++ b/.env
@@ -23,3 +23,15 @@ NEXT_PUBLIC_SENTRY_ENVIRONMENT=$SENTRY_ENVIRONMENT
 NEXT_PUBLIC_HOST=http://localhost:3000/
 
 ANALYZE=false
+
+SMTP_FROM=communication@email.conseiller-numerique.gouv.fr
+SMTP_HOST=0.0.0.0
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_PORT=1025
+SMTP_REPLYTO=conseiller-numerique@anct.gouv.fr
+
+SMTP_TEST_ACCOUNT_HOST=0.0.0.0
+SMTP_TEST_ACCOUNT_USER=
+SMTP_TEST_ACCOUNT_PASSWORD=
+SMTP_TEST_ACCOUNT_PORT=1025
