--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongodb": "^6.10.0",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
+    "nodemailer": "^6.9.16",
     "prisma-json-types-generator": "^3.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -61,6 +62,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "@types/node": "^22.8.7",
+    "@types/nodemailer": "^6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
