🔧(emails): configuration de l'envoi d'emails
Configuration de Mailpit, Nodemailer et variables d'environnement SMTP.

--- a/.env
+++ b/.env
@@ -23,3 +23,13 @@ NEXT_PUBLIC_SENTRY_ENVIRONMENT=$SENTRY_ENVIRONMENT
 NEXT_PUBLIC_HOST=http://localhost:3000/
 
 ANALYZE=false
+
+SMTP_HOST=0.0.0.0
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_PORT=1025
+
+SMTP_SUPER_ADMIN_HOST=0.0.0.0
+SMTP_SUPER_ADMIN_USER=
+SMTP_SUPER_ADMIN_PASSWORD=
+SMTP_SUPER_ADMIN_PORT=1025
