--- a/.eslintrc
+++ b/.eslintrc
@@ -104,7 +104,16 @@
           {
             "target": ["src/gateways"],
             "from": ["src", "node_modules"],
-            "except": ["domain", "use-cases", "gateways", "shared", "@prisma/client", "next-auth"],
+            "except": [
+              "domain",
+              "use-cases",
+              "gateways",
+              "shared",
+              "@prisma/client",
+              "next-auth",
+              "nodemailer",
+              "mjml"
+            ],
             "message": "Les gateways n'ont besoin que du domain et d'implementer les ports définis dans les use cases."
           },
           {
