--- a/.env
+++ b/.env
@@ -23,3 +23,13 @@ NEXT_PUBLIC_SENTRY_ENVIRONMENT=$SENTRY_ENVIRONMENT
 NEXT_PUBLIC_HOST=http://localhost:3000/
 
 ANALYZE=false
+
+SMTP_HOST=0.0.0.0
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_PORT=1025
+
+SMTP_TEST_ACCOUNT_HOST=0.0.0.0
+SMTP_TEST_ACCOUNT_USER=
+SMTP_TEST_ACCOUNT_PASSWORD=
+SMTP_TEST_ACCOUNT_PORT=1025
