--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,14 @@
 DATABASE_URL=postgresql://sgn:sgn@localhost:5434/sgn?schema=public&connection_limit=1
 NEXT_PUBLIC_HOST=http://example.com
+
 ANALYZE=false
+
+SMTP_HOST=0.0.0.0
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_PORT=1025
+
+SMTP_TEST_ACCOUNT_HOST=0.0.0.0
+SMTP_TEST_ACCOUNT_USER=
+SMTP_TEST_ACCOUNT_PASSWORD=
+SMTP_TEST_ACCOUNT_PORT=1025
