--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@next/bundle-analyzer": "^15.0.3",
     "@prisma/client": "^5.21.1",
     "@sentry/nextjs": "^8",
+    "mjml": "^4.15.3",
     "mongodb": "^6.10.0",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
@@ -61,6 +62,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
+    "@types/mjml": "^4",
     "@types/node": "^22.8.7",
     "@types/nodemailer": "^6",
     "@types/react": "^18.3.12",
