--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,3 @@
 DATABASE_URL=postgresql://sgn:sgn@localhost:5434/sgn?schema=public&connection_limit=1
 NEXT_PUBLIC_HOST=http://example.com
+ANALYZE=false
