--- a/.eslintrc
+++ b/.eslintrc
@@ -111,7 +111,8 @@
               "shared",
               "@prisma/client",
               "next-auth",
-              "nodemailer"
+              "nodemailer",
+              "mjml"
             ],
             "message": "Les gateways n'ont besoin que du domain et d'implementer les ports définis dans les use cases."
           },
