Injection des server actions

--- a/.eslintrc
+++ b/.eslintrc
@@ -125,14 +125,8 @@
           {
             "target": ["src/components"],
             "from": ["src"],
-            "except": [
-              "app/api/actions",
-              "components",
-              "presenters",
-              "shared",
-              "use-cases/testHelper.ts"
-            ],
-            "message": "Le front ne doit pas avoir la connaissance du back (sauf les server actions)."
+            "except": ["components", "presenters", "shared", "use-cases/testHelper.ts"],
+            "message": "Le front ne doit pas avoir la connaissance du back."
           }
         ]
       }
