--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.3",
+    "react-toastify": "^10.0.6",
     "zod": "^3.23.8"
   },
   "devDependencies": {
