--- a/.eslintrc
+++ b/.eslintrc
@@ -157,6 +157,7 @@
     "sort-keys-fix/sort-keys-fix": "error",
     "@typescript-eslint/array-type": ["error", { "default": "generic", "readonly": "generic" }],
     "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/class-methods-use-this": ["error", { "ignoreOverrideMethods": true }],
     "@typescript-eslint/consistent-type-imports": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/naming-convention": "off",
