--- a/package.json
+++ b/package.json
@@ -62,8 +62,9 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
+    "@types/express": "^5.0.0",
     "@types/mjml": "^4",
-    "@types/node": "^22.8.7",
+    "@types/node": "^22.9.1",
     "@types/nodemailer": "^6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18",
