--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ NEXTAUTH_SECRET=A_REMPLIR_VIA_OPENSSL
 PRO_CONNECT_CLIENT_ID=A_REMPLIR
 PRO_CONNECT_CLIENT_SECRET=A_REMPLIR
 PRO_CONNECT_URL=A_REMPLIR
+PRO_CONNECT_SCOPE=A_REMPLIR
 
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=local
