--- a/.eslintrc
+++ b/.eslintrc
@@ -160,6 +160,7 @@
     "@typescript-eslint/class-methods-use-this": ["error", { "ignoreOverrideMethods": true }],
     "@typescript-eslint/consistent-type-imports": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
+    "@typescript-eslint/init-declarations": "off",
     "@typescript-eslint/naming-convention": "off",
     "@typescript-eslint/max-params": "off",
     "@typescript-eslint/no-magic-numbers": "off",
