--- a/.eslintrc
+++ b/.eslintrc
@@ -161,6 +161,7 @@
     "@typescript-eslint/consistent-type-imports": "off",
     "@typescript-eslint/explicit-member-accessibility": "off",
     "@typescript-eslint/init-declarations": "off",
+    "@typescript-eslint/method-signature-style": ["error", "method"],
     "@typescript-eslint/naming-convention": "off",
     "@typescript-eslint/max-params": "off",
     "@typescript-eslint/no-magic-numbers": "off",
