--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "format:check": "prettier -c . \"!**/*.{js,jsx,mjs,mts,ts,tsx}\"",
     "lint:css": "stylelint 'src/**/*.css'",
     "lint:ts": "eslint src seeds --ext .tsx,.ts --max-warnings=0 --cache --cache-location node_modules/.cache/eslint",
-    "migration": "yarn migration:region && yarn migration:departement && yarn migration:groupement && yarn migration:structure && yarn migration:utilisateur",
+    "migration": "yarn migration:region && yarn migration:departement && yarn migration:groupement && yarn migration:structure && yarn migration:utilisateur && yarn migration:gouvernance",
     "migration:departement": "tsx seeds/departement.ts",
+    "migration:gouvernance": "tsx seeds/gouvernance.ts",
     "migration:groupement": "tsx seeds/groupement.ts",
     "migration:region": "tsx seeds/region.ts",
     "migration:structure": "tsx seeds/structure.ts",
