--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@stryker-mutator/core": "^8.7.1",
     "@stryker-mutator/typescript-checker": "^8.7.1",
     "@stryker-mutator/vitest-runner": "^8.7.1",
+    "@stylistic/eslint-plugin": "^2.12.1",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
@@ -67,22 +68,22 @@
     "@types/nodemailer": "^6",
     "@types/react": "^19.0.3",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^7.10.0",
-    "@typescript-eslint/parser": "^7.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-istanbul": "^2.1.8",
     "depcheck": "^1.4.7",
     "dotenv-cli": "^8.0.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
-    "eslint-plugin-deprecation": "^2.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-config-next": "^15.1.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-only-warn": "^1.1.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-sonarjs": "^3.0.1",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-testing-library": "^6.2.2",
-    "eslint-plugin-unused-imports": "^3.2.0",
-    "eslint-plugin-vitest": "^0.4.1",
+    "eslint-plugin-testing-library": "^7.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-vitest": "0.4.1",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "knip": "^5.41.1",
