--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
     "@next/bundle-analyzer": "^15.1.5",
     "@prisma/client": "^6.2.1",
     "@sentry/nextjs": "^8",
+    "@tiptap/extension-link": "^2.11.2",
+    "@tiptap/pm": "^2.11.0",
+    "@tiptap/react": "^2.11.0",
+    "@tiptap/starter-kit": "^2.11.0",
     "mjml": "^4.15.3",
     "mongodb": "^6.12.0",
     "next": "^15.1.5",
