--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^19.0.0",
     "react-select": "^5.10.0",
     "react-toastify": "^11.0.3",
+    "sanitize-html": "^2.14.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -74,6 +75,7 @@
     "@types/nodemailer": "^6",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19",
+    "@types/sanitize-html": "^2.13.0",
     "@typescript-eslint/eslint-plugin": "^8.18.2",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-istanbul": "^3.0.4",
