--- a/.eslintrc
+++ b/.eslintrc
@@ -232,10 +232,9 @@
   },
   "overrides": [
     {
-      "files": ["src/components/**/*"],
+      "files": ["**/*"],
       "excludedFiles": ["src/app/**/*", "seeds/**/*"],
       "rules": {
-        "@typescript-eslint/consistent-type-definitions": ["error", "type"],
         "no-restricted-syntax": [
           "error",
           {
@@ -282,6 +281,12 @@
     {
       "files": ["**/*.test.tsx"],
       "extends": ["plugin:testing-library/react"]
+    },
+    {
+      "files": ["src/components/**/*"],
+      "rules": {
+        "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+      }
     }
   ]
 }
