draft reorganisation du routing (#355)
* draft reorganisation du routing

* découpage menu par défaut et menu gouvernance

* retours commentaires extraction de la logique de SousMenuGouvernance

* retours commentaire refacto gouvernanceviewmodel factory

* fix fichier eslint

* rebase

* refacto suite à useContext au lieu de passer le viewmodel

--- a/.eslintrc
+++ b/.eslintrc
@@ -281,6 +281,12 @@
     {
       "files": ["**/*.test.tsx"],
       "extends": ["plugin:testing-library/react"]
+    },
+    {
+      "files": ["src/components/**/*"],
+      "rules": {
+        "@typescript-eslint/consistent-type-definitions": ["error", "type"]
+      }
     }
   ]
 }
